--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,5 @@ include_directories(${PROJECT_SOURCE_DIR})
 file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
 add_executable(${PROJECT_NAME} main.cpp ${SRC_FILES})
 #find_package(OpenSSL REQUIRED)
-target_link_libraries(${PROJECT_NAME} clickhouse-cpp-lib m opencv_core)
+target_link_libraries(${PROJECT_NAME})
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION /usr/local/bin)
