--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+---
 variables:
   TAG: 0.1.12
   NAMESPACE: vision
@@ -10,9 +11,9 @@ deploy_docker:
   stage: deploy_docker
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build . -t $CI_REGISTRY/provisioner/$CI_PROJECT_NAME:$TAG
-    - docker push $CI_REGISTRY/provisioner/$CI_PROJECT_NAME:$TAG
-  except:
+    - docker build . -t $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME:$TAG
+    - docker push $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME:$TAG
+  only:
     - main
   tags:
     - worker
@@ -34,7 +35,7 @@ deploy_helm:
       --set env.TNT_HOST=$TNT_HOST 
       --set env.TNT_PORT=$TNT_PORT
       -f .ci/values.yaml
-  only:
+  except:
     - main
   tags:
     - worker
