--- a/.ci/values.yaml
+++ b/.ci/values.yaml
@@ -11,7 +11,8 @@ image:
   tag: ""
 
 pod:
-  args: '[]'
+  command: '["/usr/local/bin/vision"]'
+  #args: '[]'
 
 imagePullSecrets: []
 nameOverride: "vision"
@@ -41,8 +42,12 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
+  enabled: true
   type: ClusterIP
   port: 5555
+
+serviceMonitor:
+  enabled: false
 
 ingress:
   enabled: false
@@ -60,17 +65,13 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources:
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 autoscaling:
   enabled: false
