--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: .ansible/playbook.yml
+          playbook: playbook.yml
           directory: ./
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
