--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,14 +13,14 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          #      - name: Set up Docker Buildx
+          #        uses: docker/setup-buildx-action@v2
+          #
+          #      - name: Login to DockerHub
+          #        uses: docker/login-action@v2
+          #        with:
+          #          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          #          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             #- name: Build and push
             #  uses: docker/build-push-action@v3
@@ -33,7 +33,7 @@ jobs:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: playbook.yml
+          playbook: ./playbook.yml
           directory: ./
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
