--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: ./playbook.yml
-          directory: ./
+          playbook: playbook.yml
+          #directory: ./
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
             [all]
