--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
         uses: dawidd6/action-ansible-playbook@v2
         with:
           playbook: playbook.yml
-          #directory: ./
+          directory: ./
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
             [all]
