--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
             #  env:
             #    tag: 0.0.2
       - name: Install ansible
-        run: sudo apt update && sudo apt install tree && tree /home/runner
+        run: sudo apt update && sudo apt install find && find / | grep yml
 
           #      - name: Run playbook
           #        uses: dawidd6/action-ansible-playbook@v1
