--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
+      - name: Checkout repo
+        uses: actions/checkout@v2.3.4
+
+
           #      - name: Set up Docker Buildx
           #        uses: docker/setup-buildx-action@v2
           #
@@ -29,18 +33,16 @@ jobs:
             #    tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ env.tag }}
             #  env:
             #    tag: 0.0.2
-      - name: Install ansible
-        run: find / | grep playbook.yml
 
-          #      - name: Run playbook
-          #        uses: dawidd6/action-ansible-playbook@v1
-          #        with:
-          #          playbook: playbook.yml
-          #          directory: ./
-          #          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          #          inventory: |
-          #            [all]
-          #            analytics ansible_host=${{ secrets.ANSIBLE_HOST }} ansible_user=root
-          #          options: |
-          #            --inventory .hosts
-          #            --extra-vars hello=there
+      - name: Run playbook
+        uses: dawidd6/action-ansible-playbook@v1
+        with:
+          playbook: playbook.yml
+          directory: ./
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          inventory: |
+            [all]
+            analytics ansible_host=${{ secrets.ANSIBLE_HOST }} ansible_user=root
+          options: |
+            --inventory .hosts
+            --extra-vars hello=there
