--- a/.ansible/playbook.yml
+++ b/.ansible/playbook.yml
@@ -7,3 +7,7 @@
       register: output
     - debug:
         msg: "{{ output }}"
+
+    - name: print var
+      debug:
+        msg: "{{ hello }}"
