--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
       - 'master'
 
 jobs:
-  docker:
+  build_docker:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -16,33 +16,40 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2.3.4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-          #      - name: Set up Docker Buildx
-          #        uses: docker/setup-buildx-action@v2
-          #
-          #      - name: Login to DockerHub
-          #        uses: docker/login-action@v2
-          #        with:
-          #          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          #          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            #- name: Build and push
-            #  uses: docker/build-push-action@v3
-            #  with:
-            #    push: false
-            #    tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ env.tag }}
-            #  env:
-            #    tag: 0.0.2
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: false
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ env.tag }}
+        env:
+          tag: 0.0.2
+
+  deploy_docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Checkout repo
+        uses: actions/checkout@v2.3.4
 
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: playbook.yml
+          playbook: .ansible/playbook.yml
           directory: ./
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
             [all]
             analytics ansible_host=${{ secrets.ANSIBLE_HOST }} ansible_user=root
-          #options: |
-          #  --inventory .hosts
-          #  --extra-vars hello=there
+          options: |
+            --extra-vars hello=there
